--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>THIS IS ABOUT PAGE</h1>
-    <a href = "../GIM.html">Go back to Home Page</a>
+    <a href = "../index.html">Go back to Home Page</a>
     
 </body>
 
